--- a/Functionary_Clone/team.html
+++ b/Functionary_Clone/team.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="styles.css">
   <link href="https://www.fontshare.com/fonts/satoshi" rel="stylesheet">
 </head>
+
 <body>
-  
   <div class="font-Satoshi text-gray-dark antialiased">
     <header class="border-b border justify-between flex items-center top-0w w-full tracking-wider">
       <div class="text-3xl font-bold text-black mr-3.5 py-5 px-6">
@@ -44,161 +44,164 @@
         </div>
       </div>
 
-      <div class="text-2xl font-bold mt-24 mb-2 ">People</div>
+      <div class="text-2xl font-extrabold mt-24 mb-2 ">
+        People
+      </div>
   
       <div class="grid grid-cols-2 mb-20 text-left">
-  
-      <div class="py-12">
-        <div class="w-48 h-48 float-left">
-          <img src="teamImg/FidaImg.jpg" alt="image"/>
-        </div> 
-        <div class="ml-48 pl-6 pt-12 text-justify ">
-          <div class="box-content h-32 w-52">
-            <div class="font-medium text-xl">
-              Fida Hakeem
-            </div>
-            <div class="texto text-base">
-              Co-founder, Finance
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="py-12">
-        <div class="w-48 h-48 float-left">
-          <img src="teamImg/shijiImg.png" alt="image"/>
-        </div>
-        <div class="ml-48 pl-6 pt-12 text-justify ">
-          <div class="box-content h-32 w-52">
-            <div class="font-medium text-xl">
-              Shijith K
-            </div>
-            <div class="texto text-base">
-              Product Engineer
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="py-12">
-        <div class="w-48 h-48 float-left">
-          <img src="teamImg/shanImg.png" alt="image"/>
-        </div>
-        <div class="ml-48 pl-6 pt-12 text-justify ">
-          <div class="box-content h-32 w-52">  
-            <div class="font-medium text-xl">
-              Santhanu Mohan
-            </div>
-            <div class="texto text-base">
-              Senior Product Designer
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="py-12">
-        <div class="w-48 h-48 float-left">
-          <img src="teamImg/sadiImg.png" alt="image"/>
-        </div>
-        <div class="ml-48 pl-6 pt-12 text-justify ">
-          <div class="box-content h-32 w-52">  
-            <div class="font-medium text-xl">
-              Mohammed Sadique
-            </div>
-            <div class="texto text-base">   
-              Product Engineer
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="py-12">
-        <div class="w-48 h-48 float-left">
-          <img src="teamImg/SirImg.jpg" alt="image"/>
-        </div>
-        <div class="ml-48 pl-6 pt-12 text-justify ">
-          <div class="box-content h-32 w-52">
-            <div class="font-medium text-xl">Muneef Hameed</div>
-            <div class="texto text-base">
-              Founder, CEO
-            </div>
-          </div>
-        </div>
-      </div>
-  
-      <div class="py-12">
-        <div class="w-48 h-48 float-left">
-          <img src="teamImg/salsaImg.png" alt="image"/>
-        </div>
-        <div class="ml-48 pl-6 pt-12 text-justify ">
-          <div class="box-content h-32 w-52">
-              <div class="font-medium  text-xl">Salsabeel</div>
-              <div class="texto text-base">
-                Co-founder, CTO
-              </div>
-          </div>
-        </div>
-      </div>
-  
         <div class="py-12">
           <div class="w-48 h-48 float-left">
-            <img src="teamImg/jitImg.jpg" alt="image"/>
+            <img src="teamImg/FidaImg.jpg" alt="image"/>
           </div> 
           <div class="ml-48 pl-6 pt-12 text-justify ">
-           <div class="box-content h-32 w-52">
-              <div class="font-medium text-xl">Jithin Velayudhan</div>
-            <div class="texto text-base">
-              Product Designer
+            <div class="box-content h-32 w-52">
+              <div class="font-bold text-xl">
+                Fida Hakeem
+              </div>
+              <div class="texto text-medium">
+                Co-founder, Finance
+              </div>
             </div>
           </div>
         </div>
-  
+        <div class="py-12">
+          <div class="w-48 h-48 float-left">
+            <img src="teamImg/shijiImg.png" alt="image"/>
+          </div>
+          <div class="ml-48 pl-6 pt-12 text-justify ">
+            <div class="box-content h-32 w-52">
+              <div class="font-bold text-xl">
+                Shijith K
+              </div>
+              <div class="texto text-medium">
+                Product Engineer
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="py-12">
+          <div class="w-48 h-48 float-left">
+            <img src="teamImg/shanImg.png" alt="image"/>
+          </div>
+          <div class="ml-48 pl-6 pt-12 text-justify ">
+            <div class="box-content h-32 w-52">  
+              <div class="font-bold text-xl">
+                Santhanu Mohan
+              </div>
+              <div class="texto text-medium">
+                Senior Product Designer
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="py-12">
+          <div class="w-48 h-48 float-left">
+            <img src="teamImg/sadiImg.png" alt="image"/>
+          </div>
+          <div class="ml-48 pl-6 pt-12 text-justify ">
+            <div class="box-content h-32 w-52">  
+              <div class="font-bold text-xl">
+                Mohammed Sadique
+              </div>
+              <div class="texto text-medium">   
+                Product Engineer
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="py-12">
+          <div class="w-48 h-48 float-left">
+            <img src="teamImg/SirImg.jpg" alt="image"/>
+          </div>
+          <div class="ml-48 pl-6 pt-12 text-justify ">
+            <div class="box-content h-32 w-52">
+              <div class="font-bold text-xl">
+                Muneef Hameed
+              </div>
+              <div class="texto text-medium">
+                Founder, CEO
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="py-12">
+          <div class="w-48 h-48 float-left">
+            <img src="teamImg/salsaImg.png" alt="image"/>
+          </div>
+          <div class="ml-48 pl-6 pt-12 text-justify ">
+            <div class="box-content h-32 w-52">
+                <div class="font-bold  text-xl">
+                  Salsabeel
+                </div>
+                <div class="texto text-medium">
+                  Co-founder, CTO
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="py-12">
+            <div class="w-48 h-48 float-left">
+              <img src="teamImg/jitImg.jpg" alt="image"/>
+            </div> 
+            <div class="ml-48 pl-6 pt-12 text-justify ">
+              <div class="box-content h-32 w-52">
+                <div class="font-bold text-xl">
+                  Jithin Velayudhan
+                </div>
+                <div class="texto text-medium">
+                  Product Designer
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-    </div>
   
-    <div class="pt-24 mb-2 text-gray-dark">
-      <div class="bgimg border-a border">
-       <div class="my-24 mx-12">
-         <div class="text-3xl font-bold">
-           Let's start talking
-         </div>
-         <div class="texto_3 font-semibold text-xl mt-3">
-           Connect with our team to discuss your
-           <br> next project
-         </div>
-       </div>
-      </div>
+      <div class="pt-16 mb-2 text-gray-dark">
+        <div class="bgimg border-a border">
+          <div class="my-24 mx-12">
+            <div class="text-3xl font-extrabold">
+              Let's start talking
+            </div>
+            <div class="texto_3 font-bold text-xl mt-3">
+              Connect with our team to discuss your
+              <br> next project
+            </div>
+          </div>
+        </div>
       </div> 
    
       <footer>
        <div class="a">
          <a class="f texto_2" href="./index.html">functionary</a>
-           <div class="b">
+          <div class="b">
             <a class="mx-2" href="./work.html">Work</a>
             <a class="mx-2" href="./services.html">Services</a>
             <a class="mx-2" href="./blogs.html">Blog</a>
             <a class="mx-2" href="./team.html">Team</a>
             <a class="mx-2" href="./careers.html">Careers</a>   
-           </div>
+          </div>
            
-           <div class="c">
-             <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-             <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
-             <div class="sicon">
-               <a href="https://twitter.com/muneef"><ion-icon name="logo-twitter"></ion-icon></a>   
-               <a href="https://fb.com/functionaryco"><ion-icon name="logo-facebook"></ion-icon></a>
-               <a href="https://dribbble.com/functionaryco"><ion-icon name="logo-dribbble"></ion-icon></a>
-             </div>
-           </div>
-       </div>
+          <div class="c">
+            <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+            <div class="sicon">
+              <a href="https://twitter.com/muneef"><ion-icon name="logo-twitter"></ion-icon></a>   
+              <a href="https://fb.com/functionaryco"><ion-icon name="logo-facebook"></ion-icon></a>
+              <a href="https://dribbble.com/functionaryco"><ion-icon name="logo-dribbble"></ion-icon></a>
+            </div>
+          </div>
+        </div>
          
-       <div class="d texto">
-           <div class="e">
-             © Copyright 2020 Functionary Labs Pvt Ltd. All rights reserved.
-             </div>
-             <div class="g">
-               Impressum -- Privacy Policy
-             </div>
-       </div>
-     </footer>
+        <div class="d texto">
+          <div class="e">
+            © Copyright 2020 Functionary Labs Pvt Ltd. All rights reserved.
+          </div>
+          <div class="g">
+            Impressum -- Privacy Policy
+          </div>
+        </div>
+      </footer>
    
-     </div>
+    </div>
 </body>
 </html>
