--- a/Functionary_Clone/work.html
+++ b/Functionary_Clone/work.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="styles.css">
   <link href="https://www.fontshare.com/fonts/satoshi" rel="stylesheet">
 </head>
+
 <body>
   <div class="texto_2 font-Satoshi text-gray-dark antialiased">
     <header class="border-b border justify-between flex items-center top-0w w-full tracking-wider">
@@ -38,66 +39,76 @@
       </div>
   
       <div class="grid grid-cols-3 mt-12 mb-20 text-left">
-      <div class="py-12">
-        <img src="workImg/fwImg.png" alt="image"/>
-        <div class="my-4">
-          Product Design
+        <div class="py-12">
+          <img src="workImg/fwImg.png" alt="image"/>
+          <div class="my-4">
+            Product Design
+          </div>
+          <div class="font-bold text-2xl tracking-normal">
+            Real-time Occupancy Seat & Management - CosmicEye
+          </div>
         </div>
-        <div class="font-bold text-2xl tracking-normal">
-          Real-time Occupancy Seat & Management - CosmicEye
+        <div class="py-12">
+          <img src="workImg/fwImg2.png" alt="image"/>
+          <div class="my-4">
+            Product Design
+          </div>
+          <div class="font-bold text-2xl tracking-normal">
+            How we helped Duruper build their recruitment platform
+          </div>
+        </div>
+        <div class="py-12">
+          <img src="workImg/fwImg3.png" alt="image">
+          <div class="my-4">
+            Product Design
+          </div>
+          <div class="font-bold text-2xl tracking-normal text-left">
+            Design System for an Identity Management Solution
+          </div>
+        </div>
+        <div class="py-12">
+          <img src="workImg/fwImg4.png" alt="image"/>
+          <div class="my-4">
+            Product Design
+          </div>
+          <div class="font-bold text-2xl tracking-normal">
+            Career Couselling App - Sorted
+          </div>
+        </div>
+        <div class="py-12">
+          <img src="workImg/fwImg5.png" alt="image"/>
+          <div class="my-4">
+            Product Design
+          </div>
+          <div class="font-bold text-2xl tracking-normal">
+            Social Network for Artists - OnePageSpotlight
+          </div>
+        </div>
+        <div class="py-12">
+          <img src="workImg/fwImg6.png" alt="image"/>
+          <div class="my-4">
+            Product Design
+          </div>
+          <div class="font-bold text-2xl tracking-normal text-left">
+            Designing for a Fantasy Gaming App - Gamezy
+          </div>
+        </div>
+        <div class="py-12">
+          <img src="workImg/fwImg7.png" alt="image"/>
+          <div class="my-4">
+            Product Design
+          </div>
+          <div class="font-bold text-2xl tracking-normal text-left">
+            Etherium Wallet App - Frontier
+          </div>
         </div>
       </div>
-      <div class="py-12">
-        <img src="workImg/fwImg2.png" alt="image"/>
-        <div class="my-4">Product Design</div>
-        <div class="font-bold text-2xl tracking-normal">
-          How we helped Duruper build their recruitment platform
-        </div>
-      </div>
-      <div class="py-12">
-        <img src="workImg/fwImg3.png" alt="image">
-        <div class="my-4">Product Design</div>
-        <div class="font-bold text-2xl tracking-normal text-left">
-          Design System for an Identity Management Solution
-        </div>
-      </div>
-      <div class="py-12">
-        <img src="workImg/fwImg4.png" alt="image"/>
-        <div class="my-4">
-          Product Design
-        </div>
-        <div class="font-bold text-2xl tracking-normal">
-          Career Couselling App - Sorted
-        </div>
-      </div>
-      <div class="py-12">
-        <img src="workImg/fwImg5.png" alt="image"/>
-        <div class="my-4">Product Design</div>
-        <div class="font-bold text-2xl tracking-normal">
-          Social Network for Artists - OnePageSpotlight
-        </div>
-      </div>
-      <div class="py-12">
-        <img src="workImg/fwImg6.png" alt="image"/>
-        <div class="my-4">Product Design</div>
-        <div class="font-bold text-2xl tracking-normal text-left">
-          Designing for a Fantasy Gaming App - Gamezy
-        </div>
-      </div>
-      <div class="py-12">
-        <img src="workImg/fwImg7.png" alt="image"/>
-        <div class="my-4">Product Design</div>
-        <div class="font-bold text-2xl tracking-normal text-left">
-          Etherium Wallet App - Frontier
-        </div>
-      </div>
-      </div>
-   </div>
+    </div>
   
-   <div class="border-a border">
-    <footer class="">
-      <div class="a">
-        <a class="f texto_2" href="./index.html">functionary</a>
+    <div class="border-a border">
+      <footer>
+        <div class="a">
+          <a class="f texto_2" href="./index.html">functionary</a>
           <div class="b">
             <a class="mx-2" href="./work.html">Work</a>
             <a class="mx-2" href="./services.html">Services</a>
@@ -107,26 +118,26 @@
           </div>
           
           <div class="c">
-          <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-          <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
-          <div class="sicon">
-          <a href="https://twitter.com/muneef"><ion-icon name="logo-twitter"></ion-icon></a>   
-          <a href="https://fb.com/functionaryco"><ion-icon name="logo-facebook"></ion-icon></a>
-          <a href="https://dribbble.com/functionaryco"><ion-icon name="logo-dribbble"></ion-icon></a>
+            <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+            <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+            <div class="sicon">
+              <a href="https://twitter.com/muneef"><ion-icon name="logo-twitter"></ion-icon></a>   
+              <a href="https://fb.com/functionaryco"><ion-icon name="logo-facebook"></ion-icon></a>
+              <a href="https://dribbble.com/functionaryco"><ion-icon name="logo-dribbble"></ion-icon></a>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
         
-      <div class="d texto">
+        <div class="d texto">
           <div class="e">
             © Copyright 2020 Functionary Labs Pvt Ltd. All rights reserved.
-            </div>
-            <div class="g">
-              Impressum -- Privacy Policy
-            </div>
-      </div>
-    </footer>
-  </div>
+          </div>
+          <div class="g">
+            Impressum -- Privacy Policy
+          </div>
+        </div>
+      </footer>
+    </div>
   
   </div>
 </body>
