--- a/Functionary_Clone/hireUs.html
+++ b/Functionary_Clone/hireUs.html
@@ -53,7 +53,7 @@
                 <label for="account type" >
                   What is your budget?
               </div>
-              <div class="grid grid-cols-4 text-left w-2/5 mt-2 mb-8">
+              <div class="grid grid-cols-4 text-left w-2/5 mt-2 mb-8 lg: w-3/5">
                 <div>
                   <input type="radio" name="account-type" class="inline" required>
                   Less than <br>£25,000
@@ -88,7 +88,7 @@
     </div>
 
     <div class="border-a border">
-      <footer class="">
+      <footer>
         <div class="a">
           <a class="f texto_2" href="./index.html">functionary</a>
           <div class="b">
