--- a/Functionary_Clone/index.html
+++ b/Functionary_Clone/index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-  <div class="texto_2 text-gray-dark antialiased">
-    <header class="border-b border justify-between flex items-center top-0w w-full tracking-wider">
-      <div class="text-3xl font-bold mr-3.5 py-5 px-6">
+  <div class="texto_2 text-gray-dark antialiased" >
+    <header class="border-b border justify-between flex items-center top-0w w-full tracking-wider sticky">
+      <div class="text-3xl font-bold mr-3.5 py-5 px-6 sticky">
         <a href="./index.html">functionary</a>
       </div>
-      <div class="text-lg font-bold ml-4 my-4">
+      <div class="text-lg font-bold ml-4 my-4 sticky">
         <nav>
           <ul class=" items-center flex flex-wrap mx-16">
             <li class="mx-10"><a href="./work.html">Works</a></li>
