--- a/Functionary_Clone/work.html
+++ b/Functionary_Clone/work.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="texto_2 font-Satoshi text-gray-dark antialiased">
+  <div class="texto_2 font-Satoshi text-gray-dark w-auto">
     <header class="border-b border justify-between flex items-center top-0w w-full tracking-wider">
       <div class="text-3xl font-bold mr-3.5 py-5 px-6">
         <a href="./index.html">functionary</a>
@@ -27,19 +27,19 @@
           </ul>
         </nav>
       </div>
-      <div class="w-60"></div>
+      
     </header>
   
-    <div class="m-8">
-      <div class="text-3xl font-semibold py-12 tracking-normal subpixel-antialiased">
+    <div class="m-8 md:m-4">
+      <div class="text-3xl font-semibold py-12 tracking-normal subpixel-antialiased sm:text-2xl">
         Featured Projects
       </div>
       <div class="texto text-2xl font-normal tracking-wide">
         We are a strategic, creative studio based out of Bangalore. Our team works with founders and product teams to ideate, design and build quality digital products and brand experiences.
       </div>
   
-      <div class="grid grid-cols-3 mt-12 mb-20 text-left">
-        <div class="py-12">
+      <div class="grid grid-cols-3 mt-12 mb-20 text-left lg: md: sm:">
+        <div class="py-12 ">
           <img src="workImg/fwImg.png" alt="image"/>
           <div class="my-4">
             Product Design
@@ -48,7 +48,7 @@
             Real-time Occupancy Seat & Management - CosmicEye
           </div>
         </div>
-        <div class="py-12">
+        <div class="py-12 ">
           <img src="workImg/fwImg2.png" alt="image"/>
           <div class="my-4">
             Product Design
