--- a/safeline/index.html
+++ b/safeline/index.html
@@ -7,26 +7,20 @@
   <title>SafeLine</title>
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
   <link href="http://fonts.cdnfonts.com/css/manrope" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="./style.css">
-  
-  <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="px-4 font-thin text-lg flex flex-wrap justify-between">
-    <div><i class="fa fa-envelope-o">   safeline@gmail.com</i></div>
-    <div><i class="fa fa-mobile">   +96891924377, +968 26988333</i></div>
-  </div>
-  <header class="px-6">
+  <header class="px-24">
     <div class="flex flex-wrap justify-between">
       <div>
         <a href="./index.html">
-          <img class="p-4" src="ll.webp" alt="img"/>
+          <img class="px-4 py-4 " src="ll.webp" alt="img"/>
         </a>
       </div>
-      <div class="uppercase text-sm font-bold tracking-wide mt-10">
-        <nav>
-          <ul class="items-right flex flex-wrap list-none">
+      <div class="uppercase text-sm font-light tracking-widest mt-10">
+        <nav class="navbar">
+          <ul class="nav-menu items-right flex flex-wrap list-none">
             <li class="px-6"><a class="active" href="./index.html">HOME</a></li>
             <li class="px-6"><a href="#">SERVICES</a></li>
             <li class="px-6"><a href="#">UTILITIES</a></li>
@@ -43,47 +37,149 @@
       </div>
     </div>
   </header>
-   <section class="py-40">
-   </section>
-  <footer class="botton-0">
-    <div class="px-24 flex flex-wrap justify-between">
-      <div>
-        <h3 class="my-4 font-semibold">SAFELINE</h3>
-        <div class="text-xs tracking-wide font-light md:">
-        <ul class="list-none">
-          <li class="my-2"><a href="./index.html">HOME</a></li>
-          <li class="my-2"><a href="#">SERVICES</a></li>
-          <li class="my-2"><a href="#">UTILITIES</a></li>
-          <li class="my-2"><a href="#">ABOUT US</a></li>
-          <li class="my-2"><a href="#">VISION</a></li>
-          <li class="my-2"><a href="#">CONTACT US</a></li>
-        </ul>
+  <div>
+    <script src="index.js"></script>
+    <div >
+      <div class="h-10">
+        <img src="safeline1.webp" alt="img" width="1440"/>
+      </div>
+      <div class="heading ">
+        Quality with Excellence,<br/>Accurate and Precise.
+      </div>
+      <div class="box">
+        <div class="text-center mt-3">see all products</div>
+      </div>
+    </div>
+    <div class="second_layout flex flex-wrap items-center">
+      <div class="text-2xl">
+        We support wide range of <br>industries with our services <br>and products
+        <img class="safeline3 float-right " src="safeline3.webp" alt="img">
+      </div>
+    </div>
+    <div class="three">
+      <div class="text-3xl ml-20 mt-20">Services</div>
+      <div class="flex flex-wrap ml-20">
+        <div class="abc flex flex-wrap items-center ">
+          <img class="mx-4" src="safeline4.webp" alt="img" width="200">
+          <img class="mx-4" src="safeline5.webp" alt="img" width="200">
+          <img class="mx-4" src="safeline6.webp" alt="img" width="200">
+          <img class="safeline10 mx-4" src="safeline10.webp" alt="img" width="200">
+        </div>
+        <div class="third3 flex flex-wrap items-center mb-12">
+          <img class="mx-4" src="safeline7.webp" alt="img" width="200"> 
+          <img class="mx-4" src="safeline8.webp" alt="img" width="200">
+          <img class="mx-4" src="safeline9.webp" alt="img" width="200">
         </div>
       </div>
-      <div class="my-6">
-        <!-- <div class="whatsapp-group text-center">
-          Message us on WhatsApp
-        </div> -->
+    </div>
+
+    <div class="abcd flex flex-wrap items-center bg-white m-24">
+      <div class="utilities text-3xl">Utilities</div>
+        <img class="m-4" src="safeline11.webp" alt="img" width="200">
+        <img class="m-4" src="safeline12.webp" alt="img" width="200">
+        <img class="m-4" src="safeline13.webp" alt="img" width="200">
+        <img class="m-4" src="safeline14.webp" alt="img" width="200">
+    </div>
+
+    <div class="xyz text-3xl ml-20 mt-20">
+      About Us
+      <div class="cntnt">
+        Anwar Al Meiha Modern LLC, founded in 1993, having objective to create new techniques in electrical field with best and improved methods, fulfilling all the modern demands of electrical works. An Oman based enterprise which is owned by Abbas KV and Khalid Muslem has won the trust of customers and the awe of competitors for ushering a modern way of serving customers in a traditional trade. Our approach is to provide you with the most innovative and cost effective service within the electrical industry. We pride ourselves on providing honest and reliable electrical solutions. As a market leader we can provide a diverse range of top quality products and services.
       </div>
-      <div >
-        <h3 class="my-4 font-semibold">ADDRESS</h3>
-        <div class="text-sm tracking-wide font-light leading-7">
-          BARKA INDUSTRIAL AREA<br/>
-          Group of Anwar Al Meiha Modern L.L.C<br/>
-          Phone Number : +96891924377<br/>
-          Landline : +968 26988333<br/>
-          E-mail : safeline@gmail.com
+      <div class="cntnt2">
+        Our work was appreciated favorably in a short period of time and it grew into a huge success. The industrial sector responded admirably to our services and work. The untiring efforts and honesty of labor is the key treasure of the company. A team of engineers, supervisors, foremen and technicians keep exploring new and modern techniques so that the optimum standard of quality work may be achieved. Quality of work with excellence and perfection is the main motive of the company which has always been the preference but the suggestions of customers are most valuable to us. Our future is secured with the knowledge that we have differentiated ourselves by offering the best products with unparalleled levels of customer empathy and service.
+      </div>
+      <div class="sqr">
+        <div class="spq">
+          <img src="safeline18.jpg" alt="" width="280"> 
         </div>
       </div>
     </div>
-  </footer>
-  <div class="px-4 flex flex-wrap justify-between text-sm tracking-wide font-light">
-    <div>
-      Copyright © 2022 smart solution for a better world - All Rights Reserved.
+
+    <div class="vision  text-3xl ml-20 mt-20">Vision
+      <div class="flex flex-wrap">
+        <div class="vision_one">Striving to be the best in its class by offering a superior product with regard to the standard of workmanship and knowledge, safe working procedures, practices and policies and the installation of quality apparatus. With power division being an integral part of our lifestyle and the cornerstone for our quality of life, there is a continuing need for products and services to harness its use. To this end, whilst acting as a responsible corporate citizen, we are faithful to the investigation and development of economical and environmentally-sustainable solutions for our commercial, industrial and domestic clients alike. We continue to drive forward, offering new technology, products and business methods. Our vast product offering encompasses Electrical, HVAC, Fire System, Switchgear &amp; Control Panels and Network Communication Systems &amp; Components.</div>
+      <div class="vision_two">
+        <img src="safeline16.png" alt="" width="200">
+      </div>
+      <div class="vision_three">
+        Being recognized and compensated for our abilities, achievements and advancements
+
+        Encouraging and exploring alternative forms of energy generation
+
+        Being broadminded, creative and courageous in the expansion of our capabilities, knowledge and skills
+
+        Promoting the health and well-being of our clients, our staff and our environment
+
+        Being honest with our clients and with one another
+
+        Promoting the safe use of electrical energy
+      </div>
+      </div>
+    
     </div>
-    <div>
-      An ISO 9001:2015;45001:2018;14001:2015 Certified
+
+    <div class="infom">
+      <div class="chairman">
+        <div class="chairman_name">
+          Khalid Muslem Salmeen  Al Kiyumi
+        </div>
+        <div class="chairman_post">
+          CHAIRMAN
+        </div>
+        <div class="chairman_decs">
+          If the last century was about meeting human needs, this one is about matching human aspirations. We live in a world where the young reach higher, dream bigger and demand more, a world that is challenging the limits of hope and possibility. 
+        </div>
+        <div class="chairman_a">
+          <a href="#">READ MORE</a>
+        </div>
+      </div>
+      <div class="director">
+        <div class="director_name">
+          Abbas KV 
+        </div>
+        <div class="director_post">
+          Manging Director
+        </div>
+        <div class="director_decs">
+          On behalf of my company I do present my compliment. We are thankful to our valuable clients who guided us to lead a company which is well established and known in the market today. Here, I briefly introduce a well-known firm all over the country of Sultanate of Oman for its unique and incomparable products and services.
+        </div>
+        <div class="director_a">
+          <a href="#">READ MORE</a>
+        </div>
+      </div>
     </div>
+
+    <div class="contact">
+      <div class="contact_us">
+        Contact Us                  
+        <div class="phone">
+          +96891924377
+          +26988333
+        </div>
+        <div class="landline">
+          (Landline)
+        </div>
+      </div>
+      <div class="enquiry">
+        Send Enquiry
+        <div class="e-mail">
+          <label for="mail"><input type="email" placeholder="Enter Email ID or number"/></label>
+        </div>
+          <div class="msg">
+      <label for="message"><input type="text" placeholder="Type your message"/></label>
+        </div>
+        <a href="#">
+          <input type="submit" value="Submit" >
+         </a>
+      </div>
+    </div>
+
+    <div class="footer-img m-12">
+    <img src="safeline17.png" alt="" width="500" height="10">
+    </div>
+
   </div>
+
 </body>
 </html>
